--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,17 @@
 ---
 layout: default
 ---
-{% include page.html %}
+
+<article>
+
+	<h1 class="title">{{ page.title }}</h1>
+
+	<div class="divider"></div>
+
+	{{ content }}
+
+</article>
+
+<div class="page-navigation">
+	<a class="home" href="{{site.baseurl}}/" title="Back to Homepage">Home</a>
+</div>
