--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,14 @@
-<aside class="logo">
+<div id="head">
+    <img src="{{site.socialimg}}" alt="Profilbilder von Raphael Seher" />
 
-	{% if page.url == '/index.html' or page.url == '/' %}
-		{% assign link = '/about' %}
-		{% assign prompt = 'About the Author' %}
-	{% else %}
-		{% assign link = '/' %}
-		{% assign prompt = 'Back to Home' %}
-	{% endif %}
-
-	<a href="{{ link | prepend: site.baseurl }}">
-		<img src="/assets/avatar.png" class="gravatar">
-	</a>
-	<span class="logo-prompt">{{ prompt }}</span>
-
-</aside>
+    <div id="nav">
+        <h1>{{site.title}}</h1>
+        <nav>
+            <a href="mailto:{{site.email}}">Email</a>
+            <a href="https://github.com/{{site.github}}">Github</a>
+            <a href="https://twitter.com/{{site.twitter}}">Twitter</a>
+            <a href="/impressum">Impressum</a>
+        </nav>
+    </div>
+</div>
+<hr />
