--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,3 @@
-<hr>
-<div class="footer">
+<section class="footer">
     <p>&copy; {{ site.time | date: '%Y' }} {{ site.author_name }}</p>
-</div>
+</section>
