--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,15 @@
 {% include head.html %}
 
 <body>
-	<div id="main">
-		{% include header.html %}
-
-		<div id="content">
-			{{ content }}
-		</div>
-
-		{% include footer.html %}
-	</div>
+    {% include sidebar.html %}
+    <div id="main">
+        {% include title.html %}
+        <div id="content">
+            <h2>{{ page.title }}</h2>
+            {{ content }}
+        </div>
+        {% include footer.html %}
+    </div>
 </body>
 
 </html>
