--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+    <!DOCTYPE html>
+    <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
@@ -8,16 +8,15 @@
 
 {% include head.html %}
 
-<body>
-	<div id="main">
-		{% include header.html %}
-
-		<div id="content">
-			{{ content }}
-		</div>
-
-		{% include footer.html %}
-	</div>
-</body>
+    <body>
+        {% include header.html %}
+        <div id="main">
+            <div id="content">
+                <h2>{{ page.title }}</h2> 
+                {{ content }}
+            </div>
+            {% include footer.html %}
+        </div>
+    </body>
 
 </html>
