--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,35 @@
-<div id="head">
-    <img src="{{site.socialimg}}" alt="Profilbilder von Raphael Seher" />
-
-    <div id="nav">
-        <h1>{{site.title}}</h1>
+<header id="nav">
+    <div class="content"> 
+        <h2 class="title"><a href="{{ site.url }}">{{site.title}}</a></h2>
         <nav>
-            <a href="mailto:{{site.email}}">Email</a>
-            <a href="https://github.com/{{site.github}}">Github</a>
-            <a href="https://twitter.com/{{site.twitter}}">Twitter</a>
+            <a href="mailto:{{ site.email }}">Email</a>
+            <a href="https://github.com/{{ site.github }}">Github</a>
+            <a href="https://twitter.com/{{ site.twitter }}">Twitter</a>
             <a href="/impressum">Impressum</a>
         </nav>
+        <section id="bio">
+            <p>
+                Informatik Student mit einigen Jahren Berufserfahrung in nativer App- und
+                Web-Entwicklung.
+            </p>
+        </section>
     </div>
-</div>
-<hr />
+    <div class="nav-background">
+    </div>
+    <div class="particle-wrapper"> 
+        <div class="particle particle-1"></div>
+        <div class="particle particle-2"></div>
+        <div class="particle particle-3"></div>
+        <div class="particle particle-4"></div>
+    </div>
+    <div id="planets">
+        <div id="raphi" class="planet planet-1"></div>
+        <div id="earth" class="planet planet-2"></div>
+        <div id="mars" class="planet planet-3"></div>
+        <div id="jupiter" class="planet planet-4"></div>
+        <div id="venus" class="planet planet-5"></div>
+    </div>
+    <section class="footer">
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author_name }}</p>
+    </section>
+</header>
