--- a/css/app.scss
+++ b/css/app.scss
@@ -119,6 +119,10 @@ body {
     .post {
       margin-bottom: 3em;
 
+      .post-header {
+        margin-top: 1.17rem;
+      }
+
       .title {
         h3,
         h2 {
