Update header content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
     </nav>
     <section id="bio">
       <p>
-        Informatik Student mit einigen Jahren Berufserfahrung in nativer App-
-        und Web-Entwicklung.
+        Informatik Student und Freelancer mit einigen Jahren Berufserfahrung in
+        nativer App- und Web-Entwicklung.
       </p>
     </section>
   </div>
