Change sidebar conten

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,8 +2,8 @@
   <div class="content">
     <section id="bio">
       <p>
-        Informatics student with professional experience in App- and
-        Web-Development.
+        Informatics student and freelancer with professional experience in App-
+        and Web-Development.
       </p>
     </section>
   </div>
@@ -25,4 +25,3 @@
     <p>&copy; {{ site.time | date: "%Y" }} {{ site.author_name }}</p>
   </section>
 </header>
-
